Event stream (#3)
* added async model training

* added output schema to codebase
