# app/src/models/tensor.py
@@ -15,10 +15,18 @@ class AsyncBatchProcessRequest(BaseModel):
 class BatchProcessRequest(BaseModel):
 
     model_id: UUID
-    input_vectors: List[Dict[str, Union[int, float]]]
+    input_vectors: List[Dict[str, float]]
 
 
 class ProcessRequest(BaseModel):
 
     model_id: UUID
-    input_vector: Dict[str, Union[int, float]]
+    input_vector: Dict[str, float]
+
+
+class TrainModelRequest(BaseModel):
+
+    model_id: UUID
+    epochs: int = 100
+    input_vectors: List[Dict[str, float]]
+    output_vectors: List[Dict[str, float]]
